--- a/app/src/main/res/layout/activity_family.xml
+++ b/app/src/main/res/layout/activity_family.xml
@@ -1,62 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="8dp"
+    android:orientation="vertical"
     tools:context=".FamilyActivity">
 
-    <GridLayout
-        android:id="@+id/gridlayout"
-        android:layout_width="366dp"
-        android:layout_height="447dp"
-        android:layout_marginStart="10sp"
-        android:layout_marginTop="10sp"
-        android:layout_marginEnd="10sp"
-        android:layout_marginBottom="10sp"
-        android:columnCount="2"
-        android:rowCount="2">
+    <Button
+        android:layout_below="@id/createEvent"
+        android:id="@+id/patientview"
+        android:gravity="right|top"
+        android:layout_width="400dp"
+        android:layout_height="100dp"
+        android:layout_centerHorizontal="true"
+        android:paddingTop="10dp"
+        android:background="@drawable/patient"
+        android:layout_marginTop="50dp"
+        android:text="Patient View"
+        android:textSize="24sp"
+        android:fontFamily="@font/bold"
+        android:textColor="#3cdddc"
+        android:paddingRight="10dp"
+        />
 
-        <Button
-            android:id="@+id/button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_row="0"
-            android:layout_column="0"
-            android:background="#ffffff"
-            android:text="@string/button"
-            android:textSize="18sp" />
+    <Button
+        android:id="@+id/addFamilyMember"
+        android:layout_width="400dp"
+        android:layout_height="100dp"
+        android:layout_below="@id/patientview"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp"
+        android:background="#ffffff"
+        android:gravity="right|top"
+        android:paddingTop="10dp"
+        android:paddingRight="10dp"
+        android:text="Add a Family Member"
+        android:textColor="#0097A7"
+        android:textSize="24sp" />
 
-        <Button
-            android:id="@+id/button2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_row="1"
-            android:layout_column="0"
-            android:background="#ffffff"
-            android:text="User ++"
-            android:textSize="18sp" />
+    <Button
+        android:id="@+id/recentActivity"
+        android:layout_width="400dp"
+        android:layout_height="100dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="100dp"
+        android:background="#ffffff"
+        android:gravity="right|top"
+        android:paddingTop="10dp"
+        android:paddingRight="10dp"
+        android:text="Recent Activity"
+        android:textAllCaps="false"
+        android:textColor="#0097A7"
+        android:textSize="24sp" />
 
-        <Button
-            android:id="@+id/button3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_row="0"
-            android:layout_column="1"
-            android:background="#ffffff"
-            android:text="@string/button"
-            android:textSize="18sp" />
-
-        <Button
-            android:id="@+id/button4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_row="1"
-            android:layout_column="1"
-            android:layout_marginRight="10dp"
-            android:background="#ffffff"
-            android:text="Settings"
-            android:textSize="18sp" />
-    </GridLayout>
+    <Button
+        android:id="@+id/createEvent"
+        android:layout_width="400dp"
+        android:layout_height="100dp"
+        android:layout_below="@id/recentActivity"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp"
+        android:background="@drawable/calendar"
+        android:text="Create an Event"
+        android:paddingRight="10dp"
+        android:gravity="right|top"
+        android:paddingTop="10dp"
+        android:textSize="24sp"
+        android:textColor="#3cdddc"
+        tools:layout_editor_absoluteX="110dp"
+        tools:layout_editor_absoluteY="201dp" />
 </RelativeLayout>
