--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -74,9 +74,10 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="27dp"
-        android:background="@null"
         android:text="Login"
-        android:textColor="@color/blue"
+        android:textAllCaps="false"
+        android:backgroundTint="@android:color/holo_blue_light"
+        android:textColor="@color/white"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
