--- a/app/src/main/res/layout/activity_add_user.xml
+++ b/app/src/main/res/layout/activity_add_user.xml
@@ -107,7 +107,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="20dp"
-            android:text="Hobbies (comma separated):"
+            android:text="Hobbies:"
             android:textSize="20sp"
             android:textAlignment="center"
             android:textColor="@color/black"/>
