implement uploading images to albums to servery

--- a/app/src/main/res/layout/activity_image_generation.xml
+++ b/app/src/main/res/layout/activity_image_generation.xml
@@ -69,7 +69,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="6"
-        android:gravity="top"
+        android:textAlignment="center"
         android:textSize="20sp"
         app:layout_constraintTop_toBottomOf="@+id/slideShowBtn"
         tools:ignore="MissingConstraints" />
@@ -98,8 +98,8 @@
         android:layout_marginTop="25dp"
         android:clickable="true"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/photoetSpeech"
         app:srcCompat="@drawable/ic_mic"
         tools:ignore="SpeakableTextPresentCheck" />
