--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,9 @@
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#888</color>
     <color name="blue">#0000FF</color>
+    <!-- Added Colors -->
+    <color name="bg_black1">#303030</color>
+    <color name="bg_black2">#1c1c1c</color>
+    <color name="element_black">#494949</color>
+    <color name="element_white">#d3d8e3</color>
 </resources>
