remove the default text in puzzle layout

--- a/app/src/main/res/layout/activity_puzzle.xml
+++ b/app/src/main/res/layout/activity_puzzle.xml
@@ -58,7 +58,7 @@
         android:layout_width="350dp"
         android:layout_height="150dp"
         android:layout_marginTop="100dp"
-        android:text="test"
+        android:text=""
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
