--- a/app/src/main/res/layout/activity_album.xml
+++ b/app/src/main/res/layout/activity_album.xml
@@ -9,18 +9,17 @@
 
     <TextView
         android:id="@+id/albumTextView"
-        android:layout_width="300dp"
-        android:layout_height="41dp"
+        android:layout_width="wrap_content"
+        android:layout_height="20dp"
         android:layout_marginTop="10dp"
         android:text="Album: Test"
-        android:textColor="@color/blue"
         android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:textColor="@color/blue"
+        android:textSize="17sp"
         app:layout_constraintEnd_toStartOf="@+id/deleteButton"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/annotationText"
-        tools:ignore="MissingConstraints"/>
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/deleteButton"
@@ -41,8 +40,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
+        android:layout_marginTop="0dp"
         android:ems="6"
-        android:textSize="20sp"
+        android:textSize="17sp"
         app:layout_constraintTop_toBottomOf="@+id/albumTextView"
         app:layout_constraintBottom_toTopOf="@+id/imageView"
         tools:ignore="MissingConstraints" />
@@ -51,12 +51,14 @@
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="fill_parent"
-        android:layout_height="250dp"
+        android:layout_height="315dp"
         android:scaleType="fitXY"
-        app:layout_constraintTop_toBottomOf="@+id/annotationText"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
         app:layout_constraintBottom_toTopOf="@+id/descriptionText"
-        android:layout_marginTop="10dp"
-        tools:ignore="MissingConstraints"/>
+        app:layout_constraintTop_toBottomOf="@+id/annotationText"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="0dp" />
 
     <TextView
         android:id="@+id/descriptionText"
@@ -64,7 +66,7 @@
         android:layout_height="wrap_content"
         android:textAlignment="center"
         android:ems="6"
-        android:textSize="20sp"
+        android:textSize="17sp"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
         app:layout_constraintBottom_toTopOf="@+id/languagesGallery"
         tools:ignore="MissingConstraints" />
@@ -84,9 +86,8 @@
     <EditText
         android:id="@+id/albumetSpeech"
         android:layout_width="350dp"
-        android:layout_height="50dp"
+        android:layout_height="20dp"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="29dp"
         android:layout_marginEnd="31dp"
         android:background="@drawable/et_bg"
         android:ems="10"
@@ -94,16 +95,17 @@
         android:inputType="textMultiLine"
         android:maxLines="10"
         android:padding="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/albumivSpeak"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/languagesGallery"
-        app:layout_constraintBottom_toTopOf="@+id/albumivSpeak"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <ImageView
         android:id="@+id/albumivSpeak"
         android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_height="40dp"
         android:clickable="true"
         app:layout_constraintTop_toBottomOf="@+id/albumetSpeech"
         app:layout_constraintBottom_toBottomOf="parent"
