--- a/app/src/main/res/layout/activity_testing.xml
+++ b/app/src/main/res/layout/activity_testing.xml
@@ -7,16 +7,19 @@
     android:layout_height="match_parent"
     tools:context=".AlbumActivity">
 
-    <Spinner
-        android:id="@+id/albumspinner"
-        android:layout_height="50dp"
-        android:layout_width="160dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginBottom="10dp"
+    <TextView
+        android:id="@+id/albumTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="20dp"
         android:layout_marginTop="10dp"
+        android:text="Album: Test"
+        android:textAlignment="center"
+        android:textColor="@color/blue"
+        android:textSize="17sp"
+        app:layout_constraintEnd_toStartOf="@+id/deleteButton"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/deleteButton"
@@ -28,7 +31,7 @@
         android:textSize="10sp"
         android:textAlignment="center"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/albumspinner"
+        app:layout_constraintStart_toEndOf="@+id/albumTextView"
         app:layout_constraintEnd_toEndOf="parent"
         tools:ignore="MissingConstraints" />
 
@@ -40,7 +43,7 @@
         android:layout_marginTop="0dp"
         android:ems="6"
         android:textSize="17sp"
-        app:layout_constraintTop_toBottomOf="@+id/albumspinner"
+        app:layout_constraintTop_toBottomOf="@+id/albumTextView"
         app:layout_constraintBottom_toTopOf="@+id/imageView"
         tools:ignore="MissingConstraints" />
     <!-- create a ImageView and Gallery -->
@@ -73,41 +76,10 @@
         android:id="@+id/languagesGallery"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-         android:animationDuration="2000"
+        android:animationDuration="2000"
         android:padding="10dp"
         android:spacing="5dp"
         app:layout_constraintTop_toBottomOf="@+id/descriptionText"
         app:layout_constraintBottom_toTopOf="@+id/albumetSpeech"
         android:unselectedAlpha="50" />
-
-    <EditText
-        android:id="@+id/albumetSpeech"
-        android:layout_width="350dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="31dp"
-        android:background="@drawable/et_bg"
-        android:ems="10"
-        android:gravity="start|top"
-        android:inputType="textMultiLine"
-        android:maxLines="10"
-        android:padding="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/albumivSpeak"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/languagesGallery"
-        tools:ignore="SpeakableTextPresentCheck" />
-
-    <ImageView
-        android:id="@+id/albumivSpeak"
-        android:layout_width="50dp"
-        android:layout_height="40dp"
-        android:clickable="true"
-        app:layout_constraintTop_toBottomOf="@+id/albumetSpeech"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:srcCompat="@drawable/ic_mic"
-        tools:ignore="MissingConstraints" />
 </androidx.constraintlayout.widget.ConstraintLayout>
